# moag

./: .dockerignore  .env.example  .gitignore  ARCHITEKTUR.md  CLAUDE.md  FEATURES.md  FEATURE_BACKLOG.md  MASSNAHMEN.md  PROJEKT_STATUS.md  README.md  moag-health-after-deploy.json
backend/: pyproject.toml  requirements.txt
backend/moag/: __init__.py  aggregator.py  alert_ack_store.py  alerts.py  api.py  cli.py  dsgvo_review_store.py  events.py  hub_client.py  hw_history.py  job_store.py  manifest_admin.py  manifest_health.py  manifest_inventory.py  models.py  pipeline_hooks.py  routes_cluster.py  routes_cockpit.py  routes_custos.py  routes_datenschutz.py  routes_manifest_admin.py  routes_manifest_health.py  routes_nasdominator.py  routes_oberon.py  routes_ocr_upload.py  routes_ocrexpert.py  routes_octoboss.py  routes_openapi.py  routes_panopticor.py  routes_qnapbackup.py  schemas.py  settings_store.py
backend/tests/: conftest.py  test_action_custos_rules_run.py  test_actions_nasdominator_services_refresh.py  test_actions_oberon_dsgvo_check.py  test_actions_oberon_llm_test.py  test_actions_oberon_smoke.py  test_actions_ocrexpert_health.py  test_actions_ocrexpert_process.py  test_actions_ocrexpert_shadow_batch.py  test_actions_octoboss_bench_start.py  test_actions_octoboss_cluster_status.py  test_actions_octoboss_ollama_pull.py  test_actions_stubs.py  test_adapter_custos.py  test_adapter_nasdominator.py  test_adapter_oberon.py  test_adapter_ocrexpert.py  test_adapter_octoboss.py  test_adapter_panopticor.py  test_adapter_qnapbackup.py  test_adapter_sonofseti.py  (+39 more)
(+317 files in other folders)
