[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moag"
version = "0.2.12"
description = "MOAG — Mother of All GUIs Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
    "gunicorn>=22",
]

[project.scripts]
moag = "moag.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["moag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# pytest-asyncio >= 0.23 braucht asyncio_mode
filterwarnings = [
    "ignore::DeprecationWarning",
]
